# TUIPTV

./: .gitignore  AGENTS.md  Cargo.toml  README.md  opencode_session.json  session-ses_1c58.md
poster_cache/: 017f63ed0f8a4a65  0200f46bbb1ec4e7  025a81e88c5cabd2  02d12871d7fd9937  032a17dac186b095  03a39777b89c4a21  03d710b8d0cf8727  04206f32f6180730  044300c8796aa0a9  04b608ef367f8f1e  04d577cb70b9b78f  04e82e216d64e52f  05d515e1a80b11ed  06539d954c5a2f31  068bc8ab5b554a92  069130aeaf9c2723  06eeaeb589b3aa51  0723190700be9de1  089f9be4f4ebeb67  0902892033c713f9  0931842ac35ec350  09bf1b35ccb47d67  0ad3e1b75c173443  0be1b6fc27cc6ded  0c00a95352401a6b  0c996fb8baefc50c  0cb06504f840c668  0cea3bc8cf925476  0d5e82df2419e54a  0e021d87468a39de  0e6cec1f0a6f7b87  0f0e3cf4b405d149  0f5e097f76982fdc  0f697584f7dc31d3  0f8a31c584864fd3  0ff852d564d3a1a4  10542112dd04bbaa  108f358d76dcc4a3  10b09b5e92e7873e  10c41c6cac3b854f  (+351 more)
src/: api.rs  app.rs  config.rs  db.rs  main.rs
src/ui/: render.rs
