[package]
name = "tuiptv"
version = "0.2.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
ratatui-image = "1"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
regex = "1"

[dev-dependencies]
pretty_assertions = "1"
